mini-mirror/templates/ingress-mini-mirror.yaml
{{/*
Copyright 2017 The Openstack-Helm Authors.
Copyright 2019, AT&T Intellectual Property

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/}}

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: maas-ingress
  creationTimestamp: 2019-02-15T20:19:07Z
  generation: 1
  name: mini-mirror-cluster-fqdn
  namespace: ucp
  resourceVersion: "9852"
  selfLink: /apis/extensions/v1beta1/namespaces/ucp/ingresses/mini-mirror-cluster-fqdn
  uid: f2977960-315e-11e9-9083-52540000a431
spec:
  rules:
  - host: mini-mirror-nc.gate.local
    http:
      paths:
      - backend:
          serviceName: mini-mirror-int
          servicePort: api
        path: /
status:
  loadBalancer:
    ingress:
    - {}
